@@ -27,7 +27,7 @@ hwloc_nvml_discover(struct hwloc_backend *backend, struct hwloc_disc_status *dst
   nvmlReturn_t ret;
   unsigned nb, i;
 
-  assert(dstatus->phase == HWLOC_DISC_PHASE_MISC);
+  assert(dstatus->phase == HWLOC_DISC_PHASE_IO);
 
   hwloc_topology_get_type_filter(topology, HWLOC_OBJ_OS_DEVICE, &filter);
   if (filter == HWLOC_TYPE_FILTER_KEEP_NONE)
@@ -123,7 +123,7 @@ hwloc_nvml_component_instantiate(struct hwloc_topology *topology,
 
 static struct hwloc_disc_component hwloc_nvml_disc_component = {
   "nvml",
-  HWLOC_DISC_PHASE_MISC,
+  HWLOC_DISC_PHASE_IO,
   HWLOC_DISC_PHASE_GLOBAL,
   hwloc_nvml_component_instantiate,
   5, /* after pci, and after cuda since likely less useful */
